Update Items header

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 			<div>
 				<div class="container-list">
 					<ul>
-						<li>Lorem ipsum silor domor amet</li>
-						<li>Lorem ipsum silor domor amet</li>
-						<li>Lorem ipsum silor domor amet</li>
-						<li>Lorem ipsum silor domor amet</li>
+						<li>Desenvolvimento de sites!</li>
+						<li>Desenvolvimento de sistemas!</li>
+						<li>Programação de novas funcionalidades!</li>
+						<li>Otimizações e Melhorias</li>
 					</ul>
 				</div><!--container-list-->
 			</div>
 			<div>
 				<div class="form">
 					<h2>Preencha o formulário e fique por dentro das novidades</h2>
-					<form>
+					<form method="post">
 						<div class="input-container">
 							<span>Nome*</span>
 							<input type="text" name="nome" required />
