--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 					<form method="post">
 						<div class="input-container">
 							<span>Nome*</span>
-							<input type="text" name="nome" required />
+							<input type="text" name="nome" placeholder="Nome..." required />
 						</div><!--input-container-->
 						<div class="input-container">
 							<span>E-mail*</span>
-							<input type="text" name="nome" required />
+							<input type="email" name="email" placeholder="Email..." required />
 						</div><!--input-container-->
 						<div class="input-container">
 							<span>Telefone*</span>
-							<input type="text" name="nome" required />
+							<input type="number" name="phone" placeholder="Telefone..." required />
 						</div><!--input-container-->
 						<p class="warning">*Campos obrigatórios</p>
 						<div class="input-submit-container">
