--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 					<div><img src="images/icon.png" /></div>
 					<div class="text-container-single">
 						<h2>Lorem ipsum</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volelit esse molestie consequat, vel illum dolore</p>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipisci ut laoreet dolore magna aliquam erat volelit esse molestie consequat, vel illum dolore</p>
 					</div><!--text-container-single-->
 				</div><!--container--single-->
 				<div class="container-single">
 					<div><img src="images/icon.png" /></div>
 					<div class="text-container-single">
 						<h2>Lorem ipsum</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volelit esse molestie consequat, vel illum dolore</p>
+						<p>Lorem ipsum dolor sit ng elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volelit esse molestie consequat, vel illum dolore</p>
 					</div><!--text-container-single-->
 				</div><!--container--single-->
 				<div class="container-single">
@@ -91,7 +91,7 @@
 	</div><!--section-1-->
 	<div class="footer">
 		<p>Todos os direitos reservados</p>
-		<p>Av. Lorem Ipsum, silor domor 211 - Cidade - Estado - 2019</p>
+		<p>Av. Gov. João Fernandes de Lima,Centro 211 - Tacima -Paraíba - 2019</p>
 	</div><!--footer-->
 </body>
 </html>
